# KnottsAccounting

./: .claude  .cursorrules  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LAW.md  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.py
docs/: README.md  cursor_initialize_project_for_accountin.md
frontend/: tsconfig.tsbuildinfo
src/: __init__.py  main.py
src/core/: __init__.py  config.py  database.py  logging.py
src/models/: __init__.py  client.py  transaction.py
src/services/: __init__.py  tax_service.py
src/utils/: __init__.py
tests/: __init__.py  conftest.py  test_tax_service.py
